Fixed amazon mobile popover

--- a/src/components/styles/App.less
+++ b/src/components/styles/App.less
@@ -30,7 +30,6 @@
 }
 
 .cool-item {
-  text-align: center;
   a {
     padding-right: 10px;
   }
